[gd_scene load_steps=7 format=3 uid="uid://cxxl07w4noxq7"]

[ext_resource type="Script" path="res://Scripts/settingsmenu.gd" id="1_hvhqx"]
[ext_resource type="PackedScene" uid="uid://d2tp5ynqim1so" path="res://Scenes/Settings/graphicssettings.tscn" id="1_x62rf"]
[ext_resource type="PackedScene" uid="uid://bqokxhagbbmo3" path="res://Scenes/Settings/audiosettings.tscn" id="2_nyf42"]
[ext_resource type="PackedScene" uid="uid://bft0mcvdlcpkk" path="res://Scenes/Settings/inputsettings.tscn" id="3_qtxaf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rergq"]
bg_color = Color(0.00784314, 0.313726, 0.466667, 0.556863)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_eh8nx"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
grow_begin = 20.0
grow_end = 20.0
thickness = 5

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_hvhqx")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rergq")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/separator = SubResource("StyleBoxLine_eh8nx")

[node name="GraphicsSettings" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource("1_x62rf")]
unique_name_in_owner = true
layout_mode = 2

[node name="AudioSettings" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource("2_nyf42")]
unique_name_in_owner = true
layout_mode = 2

[node name="InputSettings" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource("3_qtxaf")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="SaveButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
